examples/good/for_factorial.c
int main() {
	int n = readInt();
	int result = 1;
	for (i = 1 to n)
		result = result * i;
	print("factorial is:", result);
}