examples/bad/unknown_function.c
int main() {
	print(aaaaa(3));
}